--- a/project0/flashCards.html
+++ b/project0/flashCards.html
@@ -3,14 +3,56 @@
     <head>
         <title>Flash Cards</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="classic">
         <h1 class="mainHeader">Flash cards</h1>
         <div id="links">
             <div class="pageLink"><a href="index.html">Home</a></div>
             <div class="pageLink"><a href="resume.html">My resume</a></div>
             <div class="pageLink"><a href="blog.html">My blogs</a></div>
             <div class="pageLink"><a href="projects.html">Projects</a></div>
+        </div>
+
+        <div class="container">
+
+            <div class="row">
+                <div class = "col-lg">
+                    <div class="flash-card">1</div>
+                </div>
+                <div class = "col-sm">
+                    <div class="flash-card">2</div>
+                </div>
+                <div class = "col-sm">
+                    <div class="flash-card">3</div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class = "col-sm">
+                    <div class="flash-card">3</div>
+                </div>
+                <div class = "col-sm">
+                    <div class="flash-card">3</div>
+                </div>
+                <div class = "col-sm">
+                    <div class="flash-card">3</div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class = "col-sm">
+                    <div class="flash-card">3</div>
+                </div>
+                <div class = "col-sm">
+                    <div class="flash-card">3</div>
+                </div>
+                <div class = "col-sm">
+                    <div class="flash-card">3</div>
+                </div>
+            </div>
+          
+
         </div>
     </body>
 </html>
