--- a/project0/index.html
+++ b/project0/index.html
@@ -3,8 +3,9 @@
     <head>
         <title>My Webpage</title>
         <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="classic">
         <h1 class="mainHeader">Welcome</h1>
         <div id="links">
             <div class="pageLink"><a href="flashCards.html">Math Flash Cards</a></div>
