--- a/project0/index.html
+++ b/project0/index.html
@@ -14,11 +14,10 @@
             <div class="pageLink"><a href="projects.html">Projects</a></div>
         </div>
         <div id="aboutMe">
-            <h2>About me:</h2>
+            <h2>About Me</h2>
             <p>Hello! My name is Jason Carlson. I am currently a Master's student in Mathematics
                     at Arizona State University. My academic interests are in Math and programming.
-                    For fun, I like to go to the gym, go on walks, and go indoor rock climbing. If I
-                    had to choose between cats and dogs, I would definitely choose cats
+                    For fun, I like to go to the gym, go on walks, and go indoor rock climbing. 
             </p>
         </div>
 
