Finished resume page and added profile picture and meme to welcome page.

--- a/project0/projects.html
+++ b/project0/projects.html
@@ -13,5 +13,36 @@
             <div class="pageLink"><a href="resume.html">My resume</a></div>
             <div class="pageLink"><a href="blog.html">My blogs</a></div>
         </div>
+        <div class="project-list">
+            <ol>
+                <li>
+                    <h3>MonopolyTracker</h3> - A react-native app that uses firebase to store you Monopoly progress (your cards and money). Together
+                    with friends, you can create a "server" and then view eachothers cards, view eachothers money, and post pictures to a server gallery.
+                    To create a server, all you have to do is give a password others will use, and the name will be your email. At the moment it is a private
+                    repo, but soon the code will appear here: <a href=https://github.com/jcarlson212/Monopoly->Monopoly Code</a>
+                </li>
+                <li>
+                    <h3>Detox Body Cleanse App</h3> - An IOS app that uses firebase to store schedule information (for a place called Detox Body Cleanse. I did not have time
+                    to release the app to the app store because all of my grad classes). I made this a few years back, so I don't have the 
+                    code on github but I do have a video of what it looks like. Users can change their profile picture, display name, etc... and this will all be shown
+                    when they schedule appointments. Also, there is a super user account that can delete people from a certain time slot. Here is the video (skip to 10:41):
+                     <a href=https://youtu.be/yiaLd2zXSJ8?t=636>Video</a>
+                </li>
+                <li>
+                    <h3>Movie Database App</h3> - A react-native app that allows users to search for a movie using an api (so it gets the data using just HTTP requests in javascript)
+                    and then allows them to select a specific result. <a href="https://github.com/jcarlson212/MovieDatabaseApp">App Code</a>
+                </li>
+                <li>
+                    <h3>Channels with sockets.io</h3> - To be completed still. Here is the current github page: <a href="https://github.com/jcarlson212/WebDesignProject2/tree/master/project2">Code</a>
+                </li>
+                <li>
+                    <h3>Berkeley Pac-Man Projects</h3> - For my Intro to AI class at ASU, we had to do the Berkeley Pac-Man projects (all but two of them). Check them out!
+                    <a href=http://ai.berkeley.edu/project_overview.html>Projects</a>
+                </li>
+            </ol>
+
+        </div>
+    
+
     </body>
 </html>
