--- a/project0/resume.html
+++ b/project0/resume.html
@@ -13,5 +13,10 @@
             <div class="pageLink"><a href="blog.html">My blogs</a></div>
             <div class="pageLink"><a href="projects.html">Projects</a></div>
         </div>
+
+        <div class="container-lg flex-colum">
+            <embed src="../../../../Jason_Carlson_Resume.PDF" width="100%" height="1000px"/>
+        </div>
+        
     </body>
 </html>
