Made images in blog use bootstrap component

--- a/project0/blog.html
+++ b/project0/blog.html
@@ -59,20 +59,70 @@
 
         <p>The following are the PPP adjusted (if possible for some) graphs of their GDP per capita (https://tradingeconomics.com/luxembourg/gdp-per-capita-ppp)</p>
 
-        <img src="monaco-gdp-per-capita.png" alt="Monaco">
-        <img src="luxembourg-gdp-per-capita-ppp.png" alt="Luxembourg" class="rounded">
-        <img src="macau-gdp-per-capita-ppp.png" alt="Macao" class="rounded">
-        <img src="cayman-islands-gdp-per-capita-ppp-current-international-$-wb-data-.png" alt="Caymand Islands" class="rounded">
-        <img src="isle-of-man-gdp-per-capita.png" alt="Isle of Man" class="rounded">
+        <div class="media m-5">
+            <img src="monaco-gdp-per-capita.png" class="mr-3">
+            <div class="media-body">
+                <h5 class="mt-0">Monaco</h5>
+                The GDP per capita for Monaco.
+            </div>
+        </div>
+        <div class="media m-5"">
+            <img src="luxembourg-gdp-per-capita-ppp.png" class="mr-3">
+            <div class="media-body">
+                <h5 class="mt-0">Luxembourg</h5>
+                The GDP per capita (PPP adjusted) for Luxembourg.
+            </div>
+        </div>
+        <div class="media m-5"">
+            <img src="macau-gdp-per-capita-ppp.png" class="mr-3">
+            <div class="media-body">
+                <h5 class="mt-0">Macau</h5>
+                The GDP per capita (PPP adjusted) for Macau.
+            </div>
+        </div>
+        <div class="media m-5"">
+            <img src="cayman-islands-gdp-per-capita-ppp-current-international-$-wb-data-.png" class="mr-3">
+            <div class="media-body">
+                <h5 class="mt-0">Cayman Islands</h5>
+                The GDP per capita (PPP adjusted) for the Cayman Islands.
+            </div>
+        </div>
+        <div class="media m-5"">
+            <img src="isle-of-man-gdp-per-capita.png" class="mr-3">
+            <div class="media-body">
+                <h5 class="mt-0">Isle of Man</h5>
+                The GDP per capita for Isle of Man.
+            </div>
+        </div>
+
+       
 
         <p>(Note that Isle of Man and Luxembourg are not PPP adjusted)
             Since these countries clearly don't have data that goes back too far (mid 20th century), we will
             look at the GDP per capita of China, Great Brittain, and France:
         </p>
 
-        <img src="france-gdp-per-capita.png" alt="France GDP Per Capita" class="rounded">
-        <img src="united-kingdom-gdp-per-capita.png" alt="UK GDP Per Capita" class="rounded">
-        <img src="china-gdp-per-capita.png" alt="China GDP Per Capita" class="rounded">
+        <div class="media m-5"">
+            <img src="france-gdp-per-capita.png" class="mr-3">
+            <div class="media-body">
+                <h5 class="mt-0">France</h5>
+                The GDP per capita for France.
+            </div>
+        </div>
+        <div class="media m-5"">
+            <img src="united-kingdom-gdp-per-capita.png" class="mr-3">
+            <div class="media-body">
+                <h5 class="mt-0">United Kingdom</h5>
+                The GDP per capita for the United Kingdom.
+            </div>
+        </div>
+        <div class="media m-5"">
+            <img src="china-gdp-per-capita.png" class="mr-3">
+            <div class="media-body">
+                <h5 class="mt-0">China</h5>
+                The GDP per capita for China.
+            </div>
+        </div>
 
         <p>We would like to find things that characterize these economies. For now, we list a few things that we will build
             upon in the future:
