--- a/project0/resume.html
+++ b/project0/resume.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="container-lg flex-colum">
-            <embed src="../../../../Jason_Carlson_Resume.PDF" width="100%" height="1000px"/>
+            <embed src="Jason_Carlson_Resume.PDF" width="100%" height="1000px"/>
         </div>
         
     </body>
