--- a/project0/projects.html
+++ b/project0/projects.html
@@ -12,6 +12,7 @@
             <div class="pageLink"><a href="flashCards.html">Math Flash Cards</a></div>
             <div class="pageLink"><a href="resume.html">My resume</a></div>
             <div class="pageLink"><a href="blog.html">My blogs</a></div>
+            <div class="pageLink"><a href="projects.html">Projects</a></div>
         </div>
         <div class="project-list">
             <ol>
