--- a/project0/resume.html
+++ b/project0/resume.html
@@ -10,6 +10,7 @@
         <div id="links">
             <div class="pageLink"><a href="index.html">Home</a></div>
             <div class="pageLink"><a href="flashCards.html">Math Flash Cards</a></div>
+            <div class="pageLink"><a href="resume.html">My resume</a></div>
             <div class="pageLink"><a href="blog.html">My blogs</a></div>
             <div class="pageLink"><a href="projects.html">Projects</a></div>
         </div>
