--- a/project0/blog.html
+++ b/project0/blog.html
@@ -11,6 +11,7 @@
             <div class="pageLink"><a href="index.html">Home</a></div>
             <div class="pageLink"><a href="flashCards.html">Math Flash Cards</a></div>
             <div class="pageLink"><a href="resume.html">My resume</a></div>
+            <div class="pageLink"><a href="blog.html">My blogs</a></div>
             <div class="pageLink"><a href="projects.html">Projects</a></div>
         </div>
         
