--- a/project0/flashCards.html
+++ b/project0/flashCards.html
@@ -102,6 +102,7 @@
         <h1 class="mainHeader">Flash cards</h1>
         <div id="links">
             <div class="pageLink"><a href="index.html">Home</a></div>
+            <div class="pageLink"><a href="flashCards.html">Math Flash Cards</a></div>
             <div class="pageLink"><a href="resume.html">My resume</a></div>
             <div class="pageLink"><a href="blog.html">My blogs</a></div>
             <div class="pageLink"><a href="projects.html">Projects</a></div>
