Added the project information

--- a/project0/index.html
+++ b/project0/index.html
@@ -76,10 +76,11 @@
 
             window.onload = () => {
                 createItem(1, "Algorithm Visualizer", "This projects I made in React.js to show search algorithms like Dijkstra and BFS in a creative way. It also includes sorting algorithms", "pathfinder.png");
-                createItem(2, "Algorithm Visualizer", "This projects I made in React.js to show search algorithms like Dijkstra and BFS in a creative way. It also includes sorting algorithms", "pathfinder.png");
-                createItem(3, "Algorithm Visualizer", "This projects I made in React.js to show search algorithms like Dijkstra and BFS in a creative way. It also includes sorting algorithms", "pathfinder.png");
-                createItem(4, "Algorithm Visualizer", "This projects I made in React.js to show search algorithms like Dijkstra and BFS in a creative way. It also includes sorting algorithms", "pathfinder.png");
-                createItem(5, "Algorithm Visualizer", "This projects I made in React.js to show search algorithms like Dijkstra and BFS in a creative way. It also includes sorting algorithms", "pathfinder.png");
+                createItem(2, "Mental Math Website", "I made a website using Django (a python framework) that allows users to play against eachother in Mental Math games. It uses web sockets to facilitate the PvP and SQL Lite for the database to store statistics", "mentalmath.png");
+                createItem(3, "Chaos Theory Website", "This is a website I made that explains concepts in Chaos Theory like Haussdorf dimension and strange attractors. I made it in React.js and Matlab (for the graphs)", "chaos.png");
+                createItem(4, "Tic-Tac-Toe Solver", "Using Python I made an algorithm that solves Tic-Tac-Toe games against a user. This was an assignment for Harvard's online AI course where I had to implement everything but the user interface", "tictactoe.png");
+                createItem(5, "Auction site", "For Harvard's CS50 Web class I made an Auction website using Django and some JavaScript. Users can post auctions, make comments, close auctions, etc... Everything but authentication I had to make on my own", "auction.png");
+                createItem(6, "Scheduling App", "Using Swift and Firebase I made an iOS app that allows users to create an account and make appointments for a given business. They can cancel appointments and a root user can limit the people that can signup for various time slots", "scheduler.png");
             }
         </script>
     </head>
@@ -124,7 +125,7 @@
         <div id="aboutSite">
             <h2>About</h2>
             <p>Hello! My name is Jason Carlson and this is my personal website where I detail my projects 
-                and other fun stuff!
+                and other fun stuff about me. 
             </p>
         </div>
 
